# manpages-zh

./: AUTHORS  COPYRIGHT  ChangeLog  NEWS  README.md  TODO  configure.ac
src/man1/: chmod.1  expand.1  groups.1  manpages  mkdir.1  nice.1  sha384sum.1  sleep.1  stdbuf.1  test.1  timeout.1  wall.1
src/man1/zh_CN/: Makefile.am
src/man1/zh_TW/: Makefile.am
src/man2/zh_CN/: Makefile.am
src/man2/zh_TW/: Makefile.am
src/man3/zh_CN/: Makefile.am
src/man3/zh_TW/: Makefile.am
src/man4/: manpages
src/man4/zh_CN/: Makefile.am
src/man4/zh_TW/: Makefile.am
src/man5/: manpages
src/man5/zh_CN/: Makefile.am
src/man5/zh_TW/: Makefile.am
src/man6/: manpages
src/man6/zh_CN/: Makefile.am
src/man6/zh_TW/: Makefile.am
src/man7/: fifo.7  manpages
src/man7/zh_CN/: Makefile.am
src/man7/zh_TW/: Makefile.am
src/man8/: manpages
src/man8/zh_CN/: Makefile.am
src/man8/zh_TW/: Makefile.am
src/mann/zh_CN/: Makefile.am
src/mann/zh_TW/: Makefile.am
utils/: Makefile.am  append-colophon  man2html
